--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@react-three/drei": "^10.7.7",
+        "@react-three/fiber": "^9.5.0",
         "framer-motion": "^11.0.0",
         "react": "^19.2.0",
-        "react-dom": "^19.2.0"
+        "react-dom": "^19.2.0",
+        "three": "^0.182.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.39.1",
         "@types/node": "^24.10.1",
         "@types/react": "^19.2.5",
         "@types/react-dom": "^19.2.3",
+        "@types/three": "^0.182.0",
         "@vitejs/plugin-react-swc": "^4.2.2",
         "autoprefixer": "^10.4.21",
         "eslint": "^9.39.1",
